crates/ars-components/src/input/radio_group/snapshots/ars_components__input__radio_group__tests__radio_group_description.snap
---
source: crates/ars-components/src/input/radio_group/mod.rs
expression: snapshot_attrs(&api.description_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "radio-group",
            ),
        ),
        (
            Id,
            String(
                "shipping-description",
            ),
        ),
    ],
    styles: [],
}
