crates/ars-components/src/input/radio_group/snapshots/ars_components__input__radio_group__tests__radio_group_error_message.snap
---
source: crates/ars-components/src/input/radio_group/mod.rs
expression: snapshot_attrs(&api.error_message_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "error-message",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "radio-group",
            ),
        ),
        (
            Id,
            String(
                "shipping-error-message",
            ),
        ),
        (
            Role,
            String(
                "alert",
            ),
        ),
    ],
    styles: [],
}
