crates/ars-components/src/input/radio_group/snapshots/ars_components__input__radio_group__tests__radio_group_item_hidden_input.snap
---
source: crates/ars-components/src/input/radio_group/mod.rs
expression: "snapshot_attrs(&service.connect(&|_|\n{}).item_hidden_input_attrs(&key(\"express\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-hidden-input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "radio-group",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "shipping-item-express-input",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Checked,
            Bool(
                true,
            ),
        ),
        (
            Form,
            String(
                "checkout",
            ),
        ),
        (
            Name,
            String(
                "shipping_method",
            ),
        ),
        (
            Required,
            Bool(
                true,
            ),
        ),
        (
            Type,
            String(
                "radio",
            ),
        ),
        (
            Value,
            String(
                "express",
            ),
        ),
    ],
    styles: [],
}
