crates/ars-components/src/input/radio_group/snapshots/ars_components__input__radio_group__tests__radio_group_item_hidden_input_disabled.snap
---
source: crates/ars-components/src/input/radio_group/mod.rs
expression: "snapshot_attrs(&service.connect(&|_|\n{}).item_hidden_input_attrs(&key(\"drone\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-hidden-input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "radio-group",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "shipping-item-drone-input",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Disabled,
            Bool(
                true,
            ),
        ),
        (
            Form,
            String(
                "checkout",
            ),
        ),
        (
            Name,
            String(
                "shipping_method",
            ),
        ),
        (
            Type,
            String(
                "radio",
            ),
        ),
        (
            Value,
            String(
                "drone",
            ),
        ),
    ],
    styles: [],
}
