crates/ars-components/src/input/radio_group/snapshots/ars_components__input__radio_group__tests__radio_group_item_indicator.snap
---
source: crates/ars-components/src/input/radio_group/mod.rs
expression: "snapshot_attrs(&service.connect(&|_|\n{}).item_indicator_attrs(&key(\"standard\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "radio-group",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "checked",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
