crates/ars-components/src/input/radio_group/snapshots/ars_components__input__radio_group__tests__radio_group_item_label.snap
---
source: crates/ars-components/src/input/radio_group/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).item_label_attrs(&key(\"standard\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "radio-group",
            ),
        ),
        (
            Id,
            String(
                "shipping-item-standard-label",
            ),
        ),
        (
            For,
            String(
                "shipping-item-standard",
            ),
        ),
    ],
    styles: [],
}
