crates/ars-components/src/input/radio_group/snapshots/ars_components__input__radio_group__tests__radio_group_label.snap
---
source: crates/ars-components/src/input/radio_group/mod.rs
expression: snapshot_attrs(&api.label_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "radio-group",
            ),
        ),
        (
            Id,
            String(
                "shipping-label",
            ),
        ),
    ],
    styles: [],
}
